--- a/index.html
+++ b/index.html
@@ -1,16 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wine</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
+        <div class="container">
+            <div class="container"><img src="assets/icon/Wine logo.svg" alt="LogoWine">
+                <nav>
+                    <ul>
+                        <li><a href="#">Clube</a></li>
+                        <li><a href="#">Loja</a></li>
+                        <li><a href="#">Produtos</a></li>
+                        <li><a href="#">Ofertas</a></li>
+                        <li><a href="#">Eventos</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+
+            <div class="logo"><a href=""><img src="assets/icon/Ícone.svg" alt="icon"></a></div>
+        </div>
+
     </header>
+
     <main>
+
+        <div class="banner">
+            <img src="assets/img/Banner.svg" usemap="#image-map" alt="followinst">
+
+            <map name="image-map">
+                <area target="_blank" alt="followInst" title="followInst"
+                    href="https://www.instagram.com/syllas_rafael/" coords="1051,296,829,246" shape="rect">
+            </map>
+        </div>
+
+        <div class="blocogeral">
+            <div class="vinho">
+                <img src="assets/img/winebotle.svg" alt="vinho">
+                <div class="inforvinho">
+                    <h3>Bacalhôa Meia Pipa <br>Private Selection <br> Castelão Syrah 2014</h3>
+                    <p><del>R$ 37,40</del></p>
+                    <p>Sócio Wine</p>
+                    <p>R$ <strong>30</strong>,00</p>
+                    <button type="button" class="grupobtn">Adicionar</button>
+                </div>
+            </div>
+            <div class="vinho">
+                <img src="assets/img/winebotle.svg" alt="vinho">
+                <div class="inforvinho">
+                    <h3><b>Bacalhôa Meia Pipa <br>Private Selection <br> Castelão Syrah 2014</b></h3>
+                    <div>
+                        <p><del>R$ 37,40</del></p>
+                        <p>Sócio Wine</p>
+                        <p>R$ 30,00</p>
+                    </div>
+                    <form action="/adicionar">
+                        <button type="button" value="Adicionar" class="grupobtn">Adicionar</button>
+                    </form>
+                </div>
+            </div>
+            <div class="vinho">
+                <img src="assets/img/winebotle.svg" alt="vinho">
+                <div id="inforvinho2">
+                    <h3>Bacalhôa Meia Pipa <br>Private Selection <br> Castelão Syrah 2014</h3>
+                    <button type="button" id="grupobtn2">Esgotado</button>
+                </div>
+            </div>
+        </div>
+
+
     </main>
+
     <footer>
     </footer>
 </body>
+
 </html>
