--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <img src="assets/img/winebotle.svg" alt="vinho">
                 <div class="inforvinho">
                     <h3>Bacalhôa Meia Pipa <br>Private Selection <br> Castelão Syrah 2014</h3>
-                    <p><del>R$ 37,40</del></p>
-                    <p>Sócio Wine</p>
-                    <p>R$ <strong>30</strong>,00</p>
+                    <p class="format1"><del>R$ 37,40</del></p>
+                    <p class="format2">Sócio Wine</p>
+                    <p class="format3">R$ <strong>30</strong>,00</p>
                     <button type="button" class="grupobtn">Adicionar</button>
                 </div>
             </div>
@@ -56,11 +56,11 @@
                 <div class="inforvinho">
                     <h3><b>Bacalhôa Meia Pipa <br>Private Selection <br> Castelão Syrah 2014</b></h3>
                     <div>
-                        <p><del>R$ 37,40</del></p>
-                        <p>Sócio Wine</p>
-                        <p>R$ 30,00</p>
+                        <p class="format1"><del>R$ 37,40</del></p>
+                        <p class="format2">Sócio Wine</p>
+                        <p class="format3">R$ 30,00</p>
                     </div>
-                    <form action="/adicionar">
+                    <form action="https://www.instagram.com/syllas_rafael/" method="post">
                         <button type="button" value="Adicionar" class="grupobtn">Adicionar</button>
                     </form>
                 </div>
