--- a/index02.html
+++ b/index02.html
@@ -11,31 +11,31 @@
 </head>
 
 <body>
-    <header>
-        <div class="container02">
-            <div class="material-symbols-outlined">arrow_back</div>
-            <div>
-                <p>WineBox (3)</p>
-            </div>
+    <div class="carrinho">
+        <div class="cabecalho-carrinho">
+            <button>
+                <i class="material-symbols-outlined">arrow_back</i>
+            </button>
+            <h3>WINE BOX(5)</h3>
         </div>
-    </header>
-    <main>
-        <section>
-            <div class="vinho">
-                <div>
-                    <img src="assets/img/winebotle.svg" alt="winebotle">
-                </div>
-                <div>
-                    <p>Bacalhôa Meia Pipa Private Selection Castelão Syrah 2014</p>
-                    <form method="post">
-                        <label for="age"></label>
-                        <input type="number" id="age" name="age" min="0" max="120" placeholder="1">
-                    </form>
-                    <p>R$ 64,00</p>
+      <ul>
+        <li class="carrinho-item">
+            <div class="imagem">
+                <img src="assets/img/imagem-garrafa.svg" alt="vinho">
+            </div>
+            <div class="info">
+                <h4>Bacalhôa Meia Pipa Private Selection Castelão Syrah 2014</h4>
+                <div class="contador">
+                    <i class="bx bx-minus"></i>
+                    <span>1</span>
+                    <i class="bx bx-plus"></i>
+                    <div class="preco">
+                        <p>R$64,00 </p>
+                    </div>
                 </div>
             </div>
-        </section>
-    </main>
+        </li>
+      </ul>
 </body>
 
 </html>
